--- a/analyzing-PDF-metadata.ipynb
+++ b/analyzing-PDF-metadata.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "suspected-matthew",
+   "id": "expanded-lover",
    "metadata": {},
    "source": [
     "# Analyzing PDF's Metadata with Python"
@@ -10,7 +10,15 @@
   },
   {
    "cell_type": "markdown",
-   "id": "unusual-compromise",
+   "id": "anticipated-effects",
+   "metadata": {},
+   "source": [
+    "Author: samsar4"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "objective-rescue",
    "metadata": {},
    "source": [
     "### A little bit about the internal structure of PDF \n",
@@ -26,7 +34,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "confident-network",
+   "id": "copyrighted-bishop",
    "metadata": {},
    "source": [
     "### PyPDF2 module\n",
@@ -45,7 +53,7 @@
   {
    "cell_type": "code",
    "execution_count": 65,
-   "id": "intense-helen",
+   "id": "sweet-prevention",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,7 +63,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "growing-magic",
+   "id": "split-validation",
    "metadata": {},
    "source": [
     "#### `getDocumentInfo()` and `PdfFileReader()` methods:\n",
@@ -70,7 +78,7 @@
   {
    "cell_type": "code",
    "execution_count": 60,
-   "id": "gentle-freeware",
+   "id": "intimate-respect",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -84,7 +92,7 @@
   {
    "cell_type": "code",
    "execution_count": 57,
-   "id": "parental-press",
+   "id": "connected-morocco",
    "metadata": {},
    "outputs": [
     {
@@ -107,7 +115,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "musical-barrier",
+   "id": "placed-professional",
    "metadata": {},
    "source": [
     "## Getting XMP metadata\n",
@@ -123,7 +131,7 @@
   {
    "cell_type": "code",
    "execution_count": 70,
-   "id": "engaged-europe",
+   "id": "effective-plumbing",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -152,7 +160,7 @@
   {
    "cell_type": "code",
    "execution_count": 69,
-   "id": "spiritual-internship",
+   "id": "ceramic-organizer",
    "metadata": {},
    "outputs": [
     {
@@ -191,7 +199,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "female-wells",
+   "id": "marine-newark",
    "metadata": {},
    "source": [
     "## PyPDF2 problems\n",
@@ -210,10 +218,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "technical-baptist",
+   "id": "competent-direction",
    "metadata": {},
    "source": [
-    "# References:\n",
+    "### References:\n",
     "- https://www.sans.org/reading-room/whitepapers/forensics/pdf-metadata-extraction-python-38800\n",
     "- https://www.sans.org/reading-room/whitepapers/privacy/document-metadata-the-silent-killer--32974\n",
     "- https://pythonhosted.org/PyPDF2/\n",
