--- a/regular-expressions.ipynb
+++ b/regular-expressions.ipynb
@@ -6,9 +6,7 @@
    "source": [
     "# Regular Expressions in Python\n",
     "\n",
-    "###### Source: https://pythex.org/ | https://docs.python.org/3/howto/regex.html | https://regex101.com/\n",
-    "\n",
-    "###### Useful Links: https://docs.python.org/3/howto/regex.html | https://docs.python.org/3/library/re.html | https://docs.python.org/3/howto/regex.html#greedy-versus-non-greedy | https://regexcrossword.com/\n",
+    "Author: samsar4\n",
     "\n",
     "### Brief Introduction\n",
     "Regular expressions (called REs, or regexes, or regex patterns) are essentially a tiny, highly specialized programming language embedded inside Python and made available through the re module. Using this little language, you specify the rules for the set of possible strings that you want to match; this set might contain English sentences, or e-mail addresses, or TeX commands, or anything you like. You can then ask questions such as “Does this string match the pattern?”, or “Is there a match for the pattern anywhere in this string?”. You can also use REs to modify a string or to split it apart in various ways.\n",
@@ -788,13 +786,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "----\n",
-    "\n",
-    "\n",
-    "Advanced Regular Expressions Cheat-Sheet\n",
-    "Check out the following link for more information:\n",
-    "\n",
-    "https://regexcrossword.com/"
+    "### References & Useful links\n",
+    "- https://pythex.org/\n",
+    "- https://docs.python.org/3/howto/regex.html\n",
+    "- https://regex101.com/\n",
+    "- https://docs.python.org/3/howto/regex.html\n",
+    "- https://docs.python.org/3/library/re.html\n",
+    "- https://docs.python.org/3/howto/regex.html#greedy-versus-non-greedy\n",
+    "- https://regexcrossword.com/\n",
+    "- https://regexcrossword.com/"
    ]
   }
  ],
